bindings/c/include/DocumentFilters.h

	typedef wchar_t IGR_UCS2;
	typedef long IGR_LONG;
	typedef unsigned long IGR_ULONG;
typedef uint16_t IGR_UCS2;
typedef int32_t IGR_LONG;
typedef uint32_t IGR_ULONG;
	typedef short int IGR_SHORT;
	typedef float IGR_FLOAT;
	typedef IGR_LONG HPAGE;
	typedef HPAGE IGR_HPAGE;
	typedef IGR_LONG IGR_RETURN_CODE;
#define IGR_OPEN_FROM                                      IGR_LONG
	typedef struct tagError_Control_Block
	{
		char Msg[238];
		IGR_SHORT MsgId;
	} Error_Control_Block;
	struct IGR_Rect
	{
		IGR_ULONG left;
		IGR_ULONG top;
		IGR_ULONG right;
		IGR_ULONG bottom;
	};
	struct IGR_FRect
	{
		IGR_FLOAT left;
		IGR_FLOAT top;
		IGR_FLOAT right;
		IGR_FLOAT bottom;
	};
	struct IGR_Size
	{
		IGR_ULONG width;
		IGR_ULONG height;
	};
	struct IGR_Page_Pixels
	{
		IGR_ULONG width;
		IGR_ULONG height;
		IGR_LONG stride;
		IGR_OPEN_BITMAP_PIXEL_TYPE pixel_format;
		IGR_OPEN_BITMAP_FLAGS_TYPE flags;
		void* scanline0;
		IGR_ULONG palette_count;
		IGR_LONG palette[256];
		void* reserved;
	};
	struct IGR_Page_Element
	{
		IGR_ULONG struct_size;
		const void* reserved;
		IGR_PAGE_ELEMENT_TYPE type;
		IGR_ULONG depth;
		IGR_PAGE_ELEMENT_FLAG_TYPE flags;
		struct IGR_FRect pos;
		IGR_ULONG rotation;
	};
	typedef IGR_LONG(IGR_EXPORT* IGR_PAGE_ELEMENT_STYLES_CALLBACK)(const IGR_UCS2* name, const IGR_UCS2* value, void* context);
	typedef IGR_LONG(IGR_EXPORT* IGR_PAGE_ELEMENT_CALLBACK)(IGR_HPAGE page, const struct IGR_Page_Element* item, void* context);
	struct IGR_Compare_Documents_Callback_Context
	{
		IGR_ULONG struct_size;
		IGR_ULONG doc_index;
		IGR_LONG doc_handle;
		IGR_ULONG page_index;
		IGR_HPAGE page_handle;
	};
	struct IGR_Compare_Documents_Difference_Item
	{
		IGR_ULONG struct_size;
		IGR_ULONG page_index;
		struct IGR_FRect bounds;
		const IGR_UCS2* text;
	};
	struct IGR_Compare_Documents_Difference
	{
		IGR_ULONG struct_size;
		IGR_COMPARE_DOCUMENTS_DIFFERENCE_TYPE type;
		IGR_COMPARE_DOCUMENTS_DIFFERENCE_SOURCE_TYPE doc_source;
		IGR_ULONG original_page_index;
		IGR_ULONG revised_page_index;
		IGR_ULONG item_count;
		const struct IGR_Compare_Documents_Difference_Item* items;
	};
	struct IGR_Text_Compare_Enumerator;
	struct IGR_Text_Compare_Settings
	{
		IGR_ULONG struct_size;
		IGR_COMPARE_DOCUMENTS_COMPARE_TYPE compare_type;
		IGR_COMPARE_DOCUMENTS_FLAGS_TYPE flags;
		void* user_context;
		IGR_ULONG comparison_window;
		IGR_ULONG comparison_overlap;
		void* reserved1;
		void* reserved2;
		void* reserved3;
		void* reserved4;
		IGR_RETURN_CODE(CALLBACK* OpenPage)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, IGR_ULONG page_index, IGR_HPAGE* page_handle);
		IGR_RETURN_CODE(CALLBACK* ClosePage)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, IGR_HPAGE page_handle);
		IGR_RETURN_CODE(CALLBACK* GetPageMargins)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, struct IGR_FRect* margins);
		IGR_RETURN_CODE(CALLBACK* GetPageArea)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, struct IGR_FRect* page_area);
		IGR_RETURN_CODE(CALLBACK* GetNextPageIndex)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, IGR_ULONG* page_index);
		IGR_RETURN_CODE(CALLBACK* HandleError)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, const Error_Control_Block* ecb);
	};
	struct IGR_Text_Compare_Document_Source
	{
		IGR_ULONG struct_size;
		IGR_LONG doc_handle;
		IGR_ULONG doc_first_page;
		IGR_ULONG doc_page_count;
		struct IGR_FRect doc_margins;
	};
	typedef struct IGR_Text_Compare_Enumerator* IGR_HTEXTCOMPARE;
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Pixels(HPAGE pageHandle, const struct IGR_Rect* sourceRect, const struct IGR_Size* destSize,
	                                               IGR_ULONG flags, const IGR_UCS2* options, IGR_OPEN_BITMAP_PIXEL_TYPE pixel_format,
	                                               struct IGR_Page_Pixels* pixel_data, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Free_Page_Pixels(struct IGR_Page_Pixels* pixel_data, Error_Control_Block* error);
	typedef IGR_LONG(IGR_EXPORT* IGR_OPEN_CALLBACK)(IGR_OPEN_CALLBACK_ACTION action, void* payload, void* context);
	IGR_RETURN_CODE IGR_EXPORT IGR_Open_Ex(IGR_OPEN_FROM source_type, const void* source, IGR_LONG flags, const IGR_UCS2* options,
	                                       IGR_FILE_SUPPORTS_TYPE* capabilities, IGR_LONG* file_type, void* reserved,
	                                       IGR_OPEN_CALLBACK callback, void* callback_context, IGR_LONG* handle,
	                                       Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Elements(IGR_HPAGE page, const struct IGR_Page_Element* parent, IGR_ULONG first,
	                                                 IGR_ULONG* dest_count, struct IGR_Page_Element* dest, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Element_Root(IGR_HPAGE page, struct IGR_Page_Element* dest, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Element_First_Child(IGR_HPAGE page, const struct IGR_Page_Element* parent,
	                                                            struct IGR_Page_Element* dest, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Element_Next_Sibling(IGR_HPAGE page, const struct IGR_Page_Element* element,
	                                                             struct IGR_Page_Element* dest, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Element_Text(IGR_HPAGE page, const struct IGR_Page_Element* source, IGR_ULONG* char_count,
	                                                     IGR_UCS2* buffer, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Element_Styles(IGR_HPAGE page, const struct IGR_Page_Element* source,
	                                                       IGR_PAGE_ELEMENT_STYLES_CALLBACK callback, void* context,
	                                                       Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Element_Style(IGR_HPAGE page, const struct IGR_Page_Element* source, const IGR_UCS2* name,
	                                                      IGR_ULONG* char_count, IGR_UCS2* buffer, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Enum_Page_Elements(IGR_HPAGE page, const struct IGR_Page_Element* source, IGR_ULONG flags,
	                                                  IGR_ULONG max_depth, IGR_PAGE_ELEMENT_CALLBACK callback, void* context,
	                                                  Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Text_Compare_Documents(const struct IGR_Text_Compare_Document_Source* doc1,
	                                                      const struct IGR_Text_Compare_Document_Source* doc2,
	                                                      const struct IGR_Text_Compare_Settings* settings, IGR_HTEXTCOMPARE* enumerator,
	                                                      Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Text_Compare_Pages(IGR_HPAGE page1, const struct IGR_FRect* page1_margins, IGR_HPAGE page2,
	                                                  const struct IGR_FRect* page2_margins,
	                                                  const struct IGR_Text_Compare_Settings* settings, IGR_HTEXTCOMPARE* enumerator,
	                                                  Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Text_Compare_Elements(IGR_HPAGE page1, const struct IGR_Page_Element* page1_ele_root, IGR_HPAGE page2,
	                                                     const struct IGR_Page_Element* page2_ele_root,
	                                                     const struct IGR_Text_Compare_Settings* settings, IGR_HTEXTCOMPARE* enumerator,
	                                                     Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Text_Compare_Close(IGR_HTEXTCOMPARE enumerator, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Text_Compare_Reset(IGR_HTEXTCOMPARE enumerator, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Text_Compare_Next(IGR_HTEXTCOMPARE enumerator, struct IGR_Compare_Documents_Difference* result,
	                                                 Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Text_Compare_Difference_Dispose(struct IGR_Compare_Documents_Difference* result,
	                                                               Error_Control_Block* error);