bindings/python/src/DocumentFilters/DocumentFiltersAPI.py


        self.IGR_Get_Page_Pixels = self._libISYS11df.IGR_Get_Page_Pixels
        self.IGR_Get_Page_Pixels.argtypes = [HPAGE, ctypes.POINTER(None), ctypes.POINTER(None), IGR_ULONG, ctypes.POINTER(None), IGR_ULONG, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Pixels.restype = IGR_RETURN_CODE

        self.IGR_Free_Page_Pixels = self._libISYS11df.IGR_Free_Page_Pixels
        self.IGR_Free_Page_Pixels.argtypes = [ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Free_Page_Pixels.restype = IGR_RETURN_CODE

        self.IGR_Open_Ex = self._libISYS11df.IGR_Open_Ex
        self.IGR_Open_Ex.argtypes = [IGR_OPEN_FROM, ctypes.POINTER(None), IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Open_Ex.restype = IGR_RETURN_CODE

        self.IGR_Text_Compare_Documents = self._libISYS11df.IGR_Text_Compare_Documents
        self.IGR_Text_Compare_Documents.argtypes = [
            ctypes.POINTER(IGR_Text_Compare_Document_Source),
            ctypes.POINTER(IGR_Text_Compare_Document_Source),
            ctypes.POINTER(IGR_Text_Compare_Settings),
            ctypes.POINTER(IGR_HTEXTCOMPARE),
            ctypes.POINTER(Error_Control_Block)
        ]
        self.IGR_Text_Compare_Documents.restype = IGR_RETURN_CODE

        self.IGR_Text_Compare_Pages = self._libISYS11df.IGR_Text_Compare_Pages
        self.IGR_Text_Compare_Pages.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(None), #IGR_FRect
            IGR_HPAGE,
            ctypes.POINTER(None), #IGR_FRect),
            ctypes.POINTER(None), #IGR_Text_Compare_Settings),
            ctypes.POINTER(IGR_HTEXTCOMPARE),
            ctypes.POINTER(Error_Control_Block)
        ]
        self.IGR_Text_Compare_Pages.restype = IGR_RETURN_CODE

        self.IGR_Text_Compare_Elements = self._libISYS11df.IGR_Text_Compare_Elements
        self.IGR_Text_Compare_Elements.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(IGR_Text_Compare_Settings),
            ctypes.POINTER(IGR_HTEXTCOMPARE),
            ctypes.POINTER(Error_Control_Block)
        ]
        self.IGR_Text_Compare_Elements.restype = IGR_RETURN_CODE

        self.IGR_Text_Compare_Close = self._libISYS11df.IGR_Text_Compare_Close
        self.IGR_Text_Compare_Close.argtypes = [IGR_HTEXTCOMPARE, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Text_Compare_Close.restype = IGR_RETURN_CODE

        self.IGR_Text_Compare_Reset = self._libISYS11df.IGR_Text_Compare_Reset
        self.IGR_Text_Compare_Reset.argtypes = [IGR_HTEXTCOMPARE, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Text_Compare_Reset.restype = IGR_RETURN_CODE

        self.IGR_Text_Compare_Next = self._libISYS11df.IGR_Text_Compare_Next
        self.IGR_Text_Compare_Next.argtypes = [
            IGR_HTEXTCOMPARE,
            ctypes.POINTER(IGR_Compare_Documents_Difference),
            ctypes.POINTER(Error_Control_Block)
        ]
        self.IGR_Text_Compare_Next.restype = IGR_RETURN_CODE

        self.IGR_Text_Compare_Difference_Dispose = self._libISYS11df.IGR_Text_Compare_Difference_Dispose
        self.IGR_Text_Compare_Difference_Dispose.argtypes = [
            ctypes.POINTER(IGR_Compare_Documents_Difference),
            ctypes.POINTER(Error_Control_Block)
        ]
        self.IGR_Text_Compare_Difference_Dispose.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Elements = self._libISYS11df.IGR_Get_Page_Elements
        self.IGR_Get_Page_Elements.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            IGR_ULONG,
            ctypes.POINTER(IGR_ULONG),
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Get_Page_Elements.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Element_Root = self._libISYS11df.IGR_Get_Page_Element_Root
        self.IGR_Get_Page_Element_Root.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Get_Page_Element_Root.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Element_First_Child = self._libISYS11df.IGR_Get_Page_Element_First_Child
        self.IGR_Get_Page_Element_First_Child.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Get_Page_Element_First_Child.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Element_Next_Sibling = self._libISYS11df.IGR_Get_Page_Element_Next_Sibling
        self.IGR_Get_Page_Element_Next_Sibling.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Get_Page_Element_Next_Sibling.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Element_Text = self._libISYS11df.IGR_Get_Page_Element_Text
        self.IGR_Get_Page_Element_Text.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(IGR_ULONG),
            ctypes.POINTER(None),
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Get_Page_Element_Text.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Element_Styles = self._libISYS11df.IGR_Get_Page_Element_Styles
        self.IGR_Get_Page_Element_Styles.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            IGR_PAGE_ELEMENT_STYLES_CALLBACK,
            ctypes.c_void_p,
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Get_Page_Element_Styles.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Element_Style = self._libISYS11df.IGR_Get_Page_Element_Style
        self.IGR_Get_Page_Element_Style.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            ctypes.POINTER(IGR_UCS2),
            ctypes.POINTER(IGR_ULONG),
            ctypes.POINTER(IGR_UCS2),
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Get_Page_Element_Style.restype = IGR_RETURN_CODE

        self.IGR_Enum_Page_Elements = self._libISYS11df.IGR_Enum_Page_Elements
        self.IGR_Enum_Page_Elements.argtypes = [
            IGR_HPAGE,
            ctypes.POINTER(IGR_Page_Element),
            IGR_ULONG,
            IGR_ULONG,
            IGR_PAGE_ELEMENT_CALLBACK,
            ctypes.c_void_p,
            ctypes.POINTER(Error_Control_Block),
        ]
        self.IGR_Enum_Page_Elements.restype = IGR_RETURN_CODE


    __singleton = None

    @staticmethod
    def Singleton(dll_path = None):
        if ISYS11dfAPI.__singleton == None:
            ISYS11dfAPI.__singleton = ISYS11dfAPI(dll_path)
        return ISYS11dfAPI.__singleton